Omnibox UI Experiments: Fix HistoryURLProvider match text classification

Previously, the match.fill_into_edit URL formatting was roughly the
same as the match.contents formatting.

This CL fixes an issue where the offset calculation was shared between
the two. This is no longer appropriate since we are experimenting with
aggressive URL trimming on match.contents.

Bug: 739647
Change-Id: I6f56da6de6d3441ad182a8b11471d652edbc51d9